# unit27-eval-bench

./: .gitignore  DESIGN_NOTES.md  README.md  pyproject.toml
.github/workflows/: ci.yml
evals/: proof_cases.json
examples/sample-project/: README.md
examples/sample-project/evals/: eval_cases.json  proof_cases.json
examples/sample-project/u27/: EVAL_REPORT.md  eval_results.json
examples/sample-project/u27/eval_evidence/: cli-smoke-test.txt
scripts/: verify_wheel.py
src/eval_bench/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
u27/: BOUNDARY_REGISTER.md  PROOF_PACKET.md  boundary_report.json  proof_ledger.json
u27/evidence/: run-0001.txt  run-0002.txt  run-0003.txt  run-0004.txt  run-0005.txt
