[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unit27-eval-bench"
version = "0.1.0"
description = "Unit27 public field kit for running deterministic eval cases before proof recording."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Unit27 Research" }
]
keywords = ["ai", "cli", "evals", "proof-ledger", "research-infrastructure", "unit27"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Topic :: Software Development :: Testing"
]

[project.scripts]
eval-bench = "eval_bench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
